--- a/style.css
+++ b/style.css
@@ -6,3 +6,22 @@ img{
     height: 250px ;
     border: 3px solid yellow;
 }
+.a{
+    text-decoration: none;
+    color: red;
+    margin-top: 25px;
+    padding-left: 15px;
+}
+.a a{
+    text-decoration: none;
+    color: red;
+    font-size: 55px;
+    
+    border: 1px solid red;
+    background-color: yellow;
+    text-align: center;
+    border-radius: 15px;
+    margin-left: 30px; 
+    padding: 15px 15px ;   
+
+}
