add p about Osh and edit

--- a/style.css
+++ b/style.css
@@ -35,3 +35,9 @@ img{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
+.osh{
+    color: yellow;
+    font-size: 18px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
