add p about kant and edit

--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@ img{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.kant{
+    color: orange;
+    font-size: 18px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
