--- a/style.css
+++ b/style.css
@@ -2,14 +2,18 @@
     box-sizing: border-box;
 }
 
+
 img{
-    height: 250px ;
+    margin-top: 50px;
+    height: 350px ;
     border: 3px solid yellow;
+    margin-left: 650px;
+    margin-bottom: 50px;
 }
 .a{
     text-decoration: none;
     color: red;
-    margin-top: 25px;
+    margin-top: 50px;
     padding-left: 15px;
 }
 .a a{
@@ -21,8 +25,9 @@ img{
     background-color: yellow;
     text-align: center;
     border-radius: 15px;
-    margin-left: 30px; 
-    padding: 15px 15px ;   
+    margin-left: 50px; 
+    padding: 15px 15px ;  
+
 
 }
 
