--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@
     box-sizing: border-box;
 }
 
+h1{
+    text-align: center;
+    color: black;
+    margin-bottom: 35px;
+   padding: 0;
 
+}
+.h {
+    box-shadow: 0px 0px 20px 20px red;
+}
 img{
     margin-top: 50px;
     height: 350px ;
