--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ h1{
 }
 .h {
     box-shadow: 0px 0px 20px 20px red;
+
+}
+
+p{
+    color: red;
+    font-size: 18px;
+    margin: 15px;
 }
 img{
     margin-top: 50px;
